--- a/index.html
+++ b/index.html
@@ -21,13 +21,16 @@
     <a href="#courses" onclick="closeMenu()">Courses</a>
     <a href="#pricing" onclick="closeMenu()">Pricing</a>
     <a href="#progress" onclick="closeMenu()">My Progress</a>
+    <a href="#admin" id="adminNavLink" style="display:none" onclick="closeMenu()">Admin</a>
   </div>
   <div class="nav-right">
     <div class="nav-badge">🔥 <span id="navStreak">0</span> day streak</div>
-    <button class="btn btn-ghost btn-sm" onclick="openModal('login')">Sign in</button>
-    <button class="btn btn-amber btn-sm" onclick="openModal('signup')">Get started</button>
+    <div class="nav-user" id="navUser" style="display:none"></div>
+    <button class="btn btn-ghost btn-sm" id="btnSignin" onclick="openModal('login')">Sign in</button>
+    <button class="btn btn-amber btn-sm" id="btnSignup" onclick="openModal('signup')">Get started</button>
+    <button class="btn btn-ghost btn-sm" id="btnSignout" style="display:none" onclick="signOut()">Sign out</button>
     <button class="nav-hamburger" id="navHam" onclick="toggleMenu()"><span></span><span></span><span></span></button>
-  </div>
+</div>
 </nav>
 
 <section id="home" class="hero-section">
@@ -168,7 +171,73 @@
   </div>
 </section>
 
+
 <div class="grid-line"></div>
+
+<section id="admin" class="section">
+  <div class="container">
+    <div class="section-header">
+      <div class="section-tag">🛠 Staff</div>
+      <h2 class="section-title">Admin panel</h2>
+      <p class="section-sub">Manage accounts and access. This is a prototype admin console using local storage (not secure for production).</p>
+    </div>
+
+    <div id="adminGate" class="admin-gate"></div>
+
+    <div id="adminPanel" style="display:none">
+      <div class="admin-grid">
+        <div class="admin-card">
+          <div class="admin-card-title">Users</div>
+          <div class="admin-actions">
+            <input class="inp" id="adminSearch" placeholder="Search email or name…" oninput="renderAdminUsers()" />
+            <button class="btn btn-ghost btn-sm" onclick="exportUsers()">Export JSON</button>
+          </div>
+          <div class="admin-table-wrap">
+            <table class="admin-table">
+              <thead>
+                <tr>
+                  <th>User</th>
+                  <th>Role</th>
+                  <th>Plan</th>
+                  <th>Trial</th>
+                  <th>Actions</th>
+                </tr>
+              </thead>
+              <tbody id="adminUsers"></tbody>
+            </table>
+          </div>
+          <p class="admin-note">Default staff login (change this): <span class="mono">admin@mathletica.cc</span> / <span class="mono">admin1234</span></p>
+        </div>
+
+        <div class="admin-card">
+          <div class="admin-card-title">Create user</div>
+          <form onsubmit="adminCreateUser(event)">
+            <div class="form-row"><label>Full name</label><input class="inp" id="aName" required placeholder="Student name"></div>
+            <div class="form-row"><label>Email</label><input class="inp" id="aEmail" type="email" required placeholder="student@example.com"></div>
+            <div class="form-row"><label>Temp password</label><input class="inp" id="aPass" required placeholder="e.g. changeme123"></div>
+            <div class="form-row"><label>Role</label>
+              <select class="inp" id="aRole">
+                <option value="student">Student</option>
+                <option value="admin">Admin</option>
+              </select>
+            </div>
+            <div class="form-row"><label>Plan</label>
+              <select class="inp" id="aPlan">
+                <option value="free">Free</option>
+                <option value="trial">Trial (7 days)</option>
+                <option value="pro">Pro</option>
+              </select>
+            </div>
+            <button class="btn btn-amber btn-full" type="submit">Create user</button>
+          </form>
+          <div class="admin-divider"></div>
+          <button class="btn btn-outline btn-full" onclick="wipeDemoData()">Reset demo data</button>
+          <p class="admin-note">For a real product, this admin panel should be backed by a database + server-side permissions.</p>
+        </div>
+      </div>
+    </div>
+  </div>
+</section>
 
 <footer>
   <div class="container">
@@ -196,14 +265,14 @@
       <button class="auth-tab" onclick="switchAuth('signup')" id="tabSignup">Create account</button>
     </div>
     <form id="loginForm" onsubmit="handleAuth(event,'login')">
-      <div class="form-row"><label>Email</label><input class="inp" type="email" placeholder="you@example.com" required></div>
-      <div class="form-row"><label>Password</label><input class="inp" type="password" placeholder="••••••••" required></div>
+      <div class="form-row"><label>Email</label><input class="inp" id="loginEmail" type="email" placeholder="you@example.com" required></div>
+      <div class="form-row"><label>Password</label><input class="inp" id="loginPass" type="password" placeholder="••••••••" required></div>
       <button type="submit" class="btn btn-amber btn-full" style="margin-top:8px">Sign in</button>
     </form>
     <form id="signupForm" style="display:none" onsubmit="handleAuth(event,'signup')">
-      <div class="form-row"><label>Full name</label><input class="inp" type="text" placeholder="Your name" required></div>
-      <div class="form-row"><label>Email</label><input class="inp" type="email" placeholder="you@example.com" required></div>
-      <div class="form-row"><label>Password</label><input class="inp" type="password" placeholder="Min. 8 characters" required></div>
+      <div class="form-row"><label>Full name</label><input class="inp" id="signupName" type="text" placeholder="Your name" required></div>
+      <div class="form-row"><label>Email</label><input class="inp" id="signupEmail" type="email" placeholder="you@example.com" required></div>
+      <div class="form-row"><label>Password</label><input class="inp" id="signupPass" type="password" placeholder="Min. 8 characters" required></div>
       <div class="form-row"><label>Your HSC course</label><select class="inp"><option>Mathematics Standard 2</option><option>Mathematics Advanced</option><option>Mathematics Extension 1</option><option>Mathematics Extension 2</option></select></div>
       <button type="submit" class="btn btn-amber btn-full" style="margin-top:8px">Create free account</button>
       <p style="font-size:12px;color:var(--text3);text-align:center;margin-top:12px">7-day Pro trial included. No credit card required.</p>
