--- a/topic.html
+++ b/topic.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Mathletica ... Standard 2</title>
+<title>Mathletica ... Topic</title>
 
 <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -15,7 +15,7 @@
 
 <link rel="stylesheet" href="../assets/hsc.css">
 </head>
-<body data-page="std2-index">
+<body data-page="std2-topic">
 <div id="toasts"></div>
 
 <nav id="navbar" class="page-header">
@@ -37,27 +37,58 @@
 <div class="page-shell">
 <main class="page-main">
 
-<section class="page-hero">
+<section class="page-hero" style="padding-bottom:18px">
   <div class="container">
-    <div class="breadcrumbs"><a href="../index.html">Home</a><span class="sep">/</span><span>Standard 2</span></div>
-    <h1>Mathematics Standard 2</h1>
-    <p>
-      Everything is split into lessons. Click a topic, then pick a lesson, then smash the quiz.
-      No more “one page to rule them all”.
-    </p>
+    <div class="breadcrumbs">
+      <a href="../index.html">Home</a><span class="sep">/</span>
+      <a href="index.html">Standard 2</a><span class="sep">/</span>
+      <span id="crumbTopic">Topic</span>
+    </div>
+    <h1 id="topicTitle">Topic</h1>
+    <p id="topicDesc">Loading…</p>
   </div>
 </section>
 
 <div class="grid-line"></div>
 
-<section class="section">
+<section class="section" style="padding-top:24px">
   <div class="container">
-    <div class="section-header">
-      <div class="section-tag">🧭 Curriculum</div>
-      <h2 class="section-title">Topics</h2>
-      <p class="section-sub">Each topic has multiple sub-lessons (and you can add more any time).</p>
+    <div class="layout">
+      <aside class="panel">
+        <div class="panel-h"><h3>Lessons</h3><span class="badge" id="tKpiPct">...</span></div>
+        <div class="list" id="lessonList"></div>
+      </aside>
+
+      <div>
+        <div class="panel">
+          <div class="panel-h">
+            <h3>Progress</h3>
+            <a class="btn btn-ghost btn-sm" href="index.html">Back to topics</a>
+          </div>
+          <div class="panel-b">
+            <div class="kpi-row">
+              <div class="kpi"><div class="v" id="tKpiLessons">...</div><div class="l">Lessons</div></div>
+              <div class="kpi"><div class="v" id="tKpiDone">...</div><div class="l">Done</div></div>
+              <div class="kpi"><div class="v" id="tKpiPctBig">...</div><div class="l">Completion</div></div>
+            </div>
+            <div class="help" style="margin-top:12px">
+              Locked lessons show as “Pro”. For this prototype, you can unlock them by simulating Pro on the Billing page.
+            </div>
+          </div>
+        </div>
+
+        <div class="panel" style="margin-top:14px">
+          <div class="panel-h"><h3>How to use this topic</h3></div>
+          <div class="panel-b" style="color:var(--text2);line-height:1.7">
+            <ol style="margin:0;padding-left:18px">
+              <li>Pick a lesson from the left.</li>
+              <li>Watch the video (swap in Eddie Woo or other NSW-aligned creators later).</li>
+              <li>Do the quiz. Your completion saves to this device.</li>
+            </ol>
+          </div>
+        </div>
+      </div>
     </div>
-    <div class="cards" id="topicCards"></div>
   </div>
 </section>
 
